--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.17",
+    "@emotion/react": "^11.12.0",
+    "@emotion/styled": "^11.12.0",
+    "@mui/material": "^5.16.4",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "lottie-react": "^2.4.0",
@@ -20,8 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.12",
     "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
